@@ -1,3 +1,8 @@
+Thu Nov  5 13:23:34 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/xmldata/MeshExporter.java: Fix VTK export,
+	the number of triangles cannot be computed from triangle file length.
+
 Mon Nov  2 22:07:26 CET 2009 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/util/UNVReader.java: Read UNV elements 92
